@@ -3,6 +3,7 @@ python-django-openstack-auth (1.1.3-2) unstable; urgency=medium
   * Added upstream patch to support Django 1.6.
   * Removed patch for lowering python-coverage requirement (since version
     3.7 is now in Sid).
+  * Activated unit tests at build time.
 
  -- Thomas Goirand <zigo@debian.org>  Mon, 23 Dec 2013 17:59:28 +0800
 
